Update disclosure policy, add it to the footer, and fix various footer issues on small devices (#39)
* Fix footer text widths for small devices

* Add disclosure policy link to footer

* Remove Shammah from disclosure policy

--- a/css/main.css
+++ b/css/main.css
@@ -772,3 +772,17 @@ td.gutter {
   display: none;
 }
 
+.footer-donation-addr a {
+  font-size: 0.8vw
+}
+@media only screen and (max-width: 1400px) {
+  .footer-donation-addr a {
+    font-size: 1.7vw
+  }
+}
+@media only screen and (max-width: 600px) {
+  .footer-donation-addr a {
+    font-size: 2.9vw
+  }
+}
+
